<resources>
    <string name="app_name">Infinite Messenger</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_UC">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="need_an_account">Need an account?</string>
    <string name="login_UC">LOGIN</string>
    <string name="select_photo">Select photo</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New message</string>
    <string name="username">Username</string>
    <string name="send_UC">SEND</string>
    <string name="enter_text">Enter text</string>
    <string name="message">Message</string>
    <string name="select_user">Select User</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="search_2">Search</string>
    <string name="profile_settings">Profile settings</string>
    <string name="edit_UC">EDIT</string>
    <string name="username_with_two_points">Username:</string>
    <string name="perform">Perform</string>
    <string name="reset_password">Reset password</string>
    <string name="do_you_really_want_to_reset_password">Do you really want to reset your password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="password_change_mail_sent">Password change mail was sent to your email address</string>
    <string name="settings">Settings</string>
    <string name="changes_performed">Changes performed</string>
    <string name="wrong_username">Wrong username</string>
    <string name="choose_file">Choose file</string>
    <string name="message_image">Message image</string>
    <string name="type_smth_or_choose_an_image_to_send">Type something or choose an image to send</string>
    <string name="registration_success">Registration success</string>
    <string name="registration_failed">Registration failed:</string>
    <string name="more">More</string>
    <string name="refresh">Refresh</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="logged_successfully">Logged in successfully</string>
    <string name="forget_password">Forget password?</string>
    <string name="enter_email">Enter email</string>
    <string name="reset">Reset</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_you_want_to_reset">Do you want to reset your password?</string>
    <string name="password_reset_mail_was_sent">Password reset mail was sent</string>
    <string name="placeholder_you">you: %1$s</string>
</resources>
