<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ProfileSettingsActivity">

    <Button
        android:id="@+id/reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_username"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/profile_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints="username"
        android:editable="false"
        android:focusable="true"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@id/edit_profile_username"
        app:layout_constraintStart_toEndOf="@+id/field"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <ImageButton
        android:id="@+id/edit_profile_username"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:contentDescription="@string/edit_UC"
        android:src="@drawable/ic_edit_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_username" />

    <ImageButton
        android:id="@+id/edit_profile_picture"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@android:color/white"
        android:contentDescription="@string/edit_UC"
        android:src="@drawable/ic_edit_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
        app:layout_constraintStart_toEndOf="@+id/profile_picture" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/profile_picture"
        app:layout_constraintEnd_toEndOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="@id/profile_picture"
        app:layout_constraintTop_toTopOf="@id/profile_picture" />

    <TextView
        android:id="@+id/field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/username_with_two_points"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/profile_username"
        app:layout_constraintEnd_toStartOf="@id/profile_username"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        app:civ_border_color="@android:color/black"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>